# PokerSolver

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  RangeSelector.cpp  RangeSelector.h  StrategyExplorer.cpp  StrategyExplorer.h  combined.html  dark.qss  main-window.html  main.cpp  range-selector.html  strategy-explorer.html
include/: Card.h  Deck.h  GameAction.h  GameTree.h  GameTreeNode.h  Library.h  PrivateCardsManager.h  Rule.h  Trainable.h
include/builder/: GameTreeBuilder.h
include/compairer/: Compairer.h  Dic5Compairer.h
include/kuhn/: kuhn_poker_setup.h
include/nodes/: ActionNode.h  ChanceNode.h  GameActions.h  GameTreeNode.h  ShowdownNode.h  TerminalNode.h
include/ranges/: PrivateCards.h  PrivateCardsManager.h  RiverCombs.h  RiverRangeManager.h
include/solver/: PCfrSolver.h  Solver.h  best_response.h
include/tools/: GameTreeBuildingSettings.h  PrivateRangeConverter.h  Rule.h  StreetSetting.h  lookup8.h  utils.h
include/trainable/: CFRPlus.h  DiscountedCfrTrainable.h  Trainable.h
src/: Card.cpp  Deck.cpp  GameTree.cpp  Library.cpp  PrivateCards.cpp  Rule.cpp  Trainable.cpp  lookup8.cpp
src/builder/: GameTreeBuilder.cpp
src/compairer/: Dic5Compairer.cpp
src/kuhn/: kuhn_poker_setup.cpp
src/nodes/: ActionNode.cpp  ChanceNode.cpp  GameAction.cpp  GameActions.cpp  GameTreeNode.cpp  ShowdownNode.cpp  TeminalNode.cpp  TerminalNode.cpp
src/ranges/: PrivateCards.cpp  PrivateCardsManager.cpp  RiverCombs.cpp  RiverRangeManager.cpp
src/solver/: PCfrSolver.cpp  Solver.cpp  best_response.cpp
src/tools/: GameTreeBuildingSettings.cpp  PrivateRangeConverter.cpp  Rule.cpp  StreetSetting.cpp  lookup8.cpp
src/trainable/: CFRPlus.cpp  DiscountedCfrTrainable.cpp
styles/: dark.qss
test_data/: simple_flop_scenario.json
tests/: action_node_test.cpp  best_response_test.cpp  card_test.cpp  chance_node_test.cpp  deck_test.cpp  dic5_compairer_test.cpp  discounted_cfr_trainable_test.cpp  game_tree_building_settings_test.cpp  game_tree_test.cpp  pcfr_solver_integration_test.cpp  pcfr_solver_test.cpp  private_card_manager_test.cpp  private_cards_test.cpp  private_range_converter_test.cpp  river_range_manager_test.cpp  rule_test.cpp  showdown_node_test.cpp  terminal_node_test.cpp  test_dic5_compairer.cpp  test_scenario_loader.cpp  test_scenario_loader.h  utils_test.cpp
